logical-inventory-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-inventory-api-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: test-inventory-api-app
