logical-inventory-api/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-inventory-api
spec:
  gateways:
    - test-inventory-api                        
  hosts:
    - logical-inventory-test.gcp.bcinfra.net       
  http:
    - match:                                
        - uri:
            prefix: /
      route:
        - destination:
            host: test-inventory-api-svc           
            port:
              number: 80
